* Fix problem in matlab mex extenion determination on linux when using the
  configure script.

1.5 2018-12-17
~~~~~~~~~~~~~~

* Fixed issue where vertical smoothing/regridding provided invalid results if
  input variables were available as float instead of double data.

* harp_product_get_derived_variable() no longer converts data to double if
  no data type was provided and data already had the right unit.

* Fixed issue where listing derivations for a specific variable would not show
  all possible conversions.

* Add derivation for cloud height from cloud base/top height.

* Added support for Dobson, Pandora and Sonde products in GEOMS format.

* Updates to ACE-FTS, GOME/GOME-2 L2, and S5P L2 product ingestions.

1.4 2018-09-28
~~~~~~~~~~~~~~

* Added -t/--target option to harpdump --list-derivations.

* Added variable_name parameter to harp_doc_list_conversions().

* Added support for meridional/zonal wind speed, and planetary boundary layer
  height variables.

* Added support for sic (Shannon information content) variables for vertical
  profiles.

* Aerosol optical depth and extinction coefficient variables will now
  automatically use a log/log regridding in the spectral dimension.
  This is equivalent to using the Angstrom Exponent approach.

* Fixed interpolation issue where points beyond the source grid could end up
  having an arbitrary wrong value (instead of NaN). This is a regression of
  harp 1.3.

* Add derivations between wind speed/direction and zonal/meridional velocity.

* Flattening a dimension now special cases a dimension length 1 (with less
  modifications to variables/product).

* Fixed issue where a point distance of 0 could sometimes result in NaN.

* Updates to S5P L2, GOME/GOME-2 L2, GEOMS UVVIS-DOAS-OFFAXIS, ECMWF GRIB, and
  AERONET product ingestions.

1.3 2018-07-05
~~~~~~~~~~~~~~

* Added bin_spatial() operation.

* Improved binning operation to automatically filter for NaN values and add